# clipsnap

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
core/frontend/: eslint.config.js  index.html  package.json  vitest.config.ts
core/frontend/src/: App.tsx  styles.css
core/frontend/src/components/: Footer.test.tsx  Footer.tsx  HistoryItem.tsx  HistoryList.tsx  HotkeyCapture.tsx  NotesPanel.tsx  PreviewPanel.tsx  SearchBar.tsx  SettingsPanel.tsx  SnippetsPanel.tsx
core/frontend/src/hooks/: useClipboardHistory.ts  useFuzzySearch.ts  useKeyboardNav.ts  useNotes.ts  useSnippets.ts
core/frontend/src/lib/: calc.test.ts  calc.ts  colors.test.ts  colors.ts  format.test.ts  format.ts  ipc.ts  types.ts
core/rust-lib/: Cargo.toml
core/rust-lib/src/: backup.rs  clipboard_watcher.rs  commands.rs  db.rs  expander.rs  hotkey.rs  lib.rs  models.rs  notes.rs  paste.rs  settings.rs  snippets.rs  ui_state.rs
core/rust-lib/src/text_field/: macos.rs  mod.rs  windows.rs
docs/: RELEASING.md  backup.md  colors.md  notes.md  snippets-example.json  snippets-import.md  spec.md  text-expander.md
docs/examples/snippets/: README.md  dev.json  markdown.json  signatures.json  wrapped-form.json
macos/: README.md  package.json
macos/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
macos/src-tauri/capabilities/: default.json
macos/src-tauri/src/: main.rs
scripts/: check.sh  install-macos.sh
win/: README.md  package.json
win/src-tauri/: Cargo.toml  tauri.conf.json
win/src-tauri/capabilities/: default.json
win/src-tauri/src/: main.rs
