[workspace]
resolver = "2"
members = ["core/rust-lib", "win/src-tauri", "macos/src-tauri"]

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["Martin Pfeffer <martinpaush@gmail.com>"]
license = "MIT"
repository = "https://github.com/pepperonas/clipsnap"

[workspace.dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"

# Data / crypto
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"

# OS integration
clipboard-rs = "0.2"
enigo = "0.3"
dirs = "5"

# Observability / errors / concurrency
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
