[package]
name = "clipsnap-core"
description = "Shared, OS-independent app logic for ClipSnap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "clipsnap_core"
crate-type = ["rlib"]

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
clipboard-rs = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
enigo = { workspace = true }
