[package]
name = "clipsnap-win"
description = "ClipSnap — Windows 11 bundle shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "clipsnap"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Shared app logic.
clipsnap-core = { path = "../../core/rust-lib" }

# Tauri + plugins are listed here (in addition to clipsnap-core) so that
# `tauri-build` can discover the plugins' permission manifests — the permission
# scanner walks this crate's direct deps, not transitive ones. Cargo dedupes
# the actual compilation units.
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-dialog = { workspace = true }
